--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Bahzad | Premium Eastern Wear</title>
-    <meta name="description" content="Bahzad - Premium Eastern Wear for Men and Women" />
-    <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><rect width=%22100%22 height=%22100%22 fill=%22%23232323%22/><text y=%22.9em%22 x=%2245%22 text-anchor=%22middle%22 font-size=%2290%22 font-family=%22sans-serif%22 fill=%22white%22 font-weight=%22bold%22>B</text><circle cx=%2280%22 cy=%2280%22 r=%2212%22 fill=%22%23ec4899%22/></svg>">
+    <title>Pari Posh | Premium Eastern Wear</title>
+    <meta name="description" content="Pari Posh - Premium Eastern Wear for Men and Women" />
+    <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><rect width=%22100%22 height=%22100%22 fill=%22%23232323%22/><text y=%22.9em%22 x=%2245%22 text-anchor=%22middle%22 font-size=%2290%22 font-family=%22sans-serif%22 fill=%22white%22 font-weight=%22bold%22>P</text><circle cx=%2280%22 cy=%2280%22 r=%2212%22 fill=%22%23ec4899%22/></svg>">
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&family=Poppins:wght@300;400;500;600;700&family=Playfair+Display:ital,wght@0,400;0,600;0,700;1,400&display=swap" rel="stylesheet">
     <script>
